--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "axios": "^1.6.5",
     "sass": "^1.69.7",
     "swiper": "^11.0.5",
     "vuex": "^4.1.0"
